After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 684077 - Fix some leaks
Fix some leaks
Status: RESOLVED FIXED
Product: at-spi
Classification: Platform
Component: at-spi2-atk
unspecified
Other All
: Normal normal
: ---
Assigned To: Li Yuan
At-spi maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-09-15 10:59 UTC by William Jon McCann
Modified: 2012-09-18 01:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Close the connection when we are done with it (928 bytes, patch)
2012-09-15 10:59 UTC, William Jon McCann
committed Details | Review
Don't leak strings (1.70 KB, patch)
2012-09-15 10:59 UTC, William Jon McCann
committed Details | Review
Don't leak message (695 bytes, patch)
2012-09-15 10:59 UTC, William Jon McCann
committed Details | Review
Don't leak pending calls (772 bytes, patch)
2012-09-15 10:59 UTC, William Jon McCann
committed Details | Review

Description William Jon McCann 2012-09-15 10:59:03 UTC
Here are some patches to fix some leaks.
Comment 1 William Jon McCann 2012-09-15 10:59:05 UTC
Created attachment 224394 [details] [review]
Close the connection when we are done with it

Since it is no longer a shared connection
Comment 2 William Jon McCann 2012-09-15 10:59:07 UTC
Created attachment 224395 [details] [review]
Don't leak strings
Comment 3 William Jon McCann 2012-09-15 10:59:10 UTC
Created attachment 224396 [details] [review]
Don't leak message
Comment 4 William Jon McCann 2012-09-15 10:59:12 UTC
Created attachment 224397 [details] [review]
Don't leak pending calls
Comment 5 Mike Gorse 2012-09-17 16:50:18 UTC
Comment on attachment 224394 [details] [review]
Close the connection when we are done with it

This looks fine once the patch on 684033 is committed.

Originally, these connections needed to be shared because libatspi needed not to deadlock when an AT is also an application and is expecting itself, but at-spi2-atk calls libatspi to get the D-Bus connection, so this should not be an issue anymore (and it might have the side-effect of preventing unrelated D-Bus calls from being handled when the application wasn't expecting them).
Comment 6 Mike Gorse 2012-09-17 16:51:27 UTC
Comment on attachment 224396 [details] [review]
Don't leak message

This looks okay. Thanks for the patches.
Comment 7 Mike Gorse 2012-09-18 01:27:54 UTC
Comment on attachment 224394 [details] [review]
Close the connection when we are done with it

Attachment 224394 [details] committed as fa41c5.
Comment 8 Mike Gorse 2012-09-18 01:29:03 UTC
Comment on attachment 224395 [details] [review]
Don't leak strings

Attachment 224395 [details] committed as 1b1fa3.
Comment 9 Mike Gorse 2012-09-18 01:29:59 UTC
Comment on attachment 224396 [details] [review]
Don't leak message

Attachment 224396 [details] committed as 5431eb.
Comment 10 Mike Gorse 2012-09-18 01:30:39 UTC
Comment on attachment 224397 [details] [review]
Don't leak pending calls

Attachment 224397 [details] committed as e10156.
Comment 11 Mike Gorse 2012-09-18 01:31:30 UTC
All patches committed. Closing.