Close the connection when we are done with it

Since it is no longer a shared connection

https://bugzilla.gnome.org/show_bug.cgi?id=684077